Ensuring java1.8, and that maven runs tests from command line.